--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ openai==0.28
 python-dotenv
 langchain
 langchain_groq
-pyaudio
+
+import os
+os.system("apt-get install -y portaudio19-dev")
+import pyaudio
